--- a/css/styles.css
+++ b/css/styles.css
@@ -132,12 +132,15 @@ main section.main-sections {
     background-color: var(--color-purple);
     display: flex;
     flex-direction: column;
+    align-items: stretch;
+    align-content: stretch;
 }
 
 .section-txt {
     padding: 2rem;
     text-align: left;
     align-self: center;
+    flex-grow: 1;
 }
 
 .section-txt > span {
@@ -152,8 +155,8 @@ main section.main-sections {
 
 .section-img {
     width: 100%;
-    min-height: 300px;
     object-fit: cover;
+    flex-grow: 1;
 }
 
 @media screen and (min-width: 992px) {
