--- a/css/styles.css
+++ b/css/styles.css
@@ -89,19 +89,20 @@ h3 {
     min-width: 100%;
     flex-direction: column;
     align-items: center;
+    list-style-type: none;
 }
 
-#menu-itens a {
+#menu-itens li {
     cursor: pointer;
     padding: 0.5rem;
 }
 
-#menu-itens a.active {
+#menu-itens li.active {
     color: white;
     font-weight: 900;
 }
 
-#menu-itens a:hover,
+#menu-itens li:hover,
 #menu-btn:hover {
     color: var(--color-pink);
 }
@@ -119,7 +120,7 @@ h3 {
         align-items: center;
     }
 
-    #menu-itens a {
+    #menu-itens li {
         cursor: pointer;
         padding: 0 0.5rem;
     }
