--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ h3 {
     transition: ease-in-out;
     display: none;
     margin-top: 1rem;
+    margin-bottom: 0;
     min-width: 100%;
     flex-direction: column;
     align-items: center;
