--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,7 @@ h3 {
 }
 
 #menu-itens {
+    padding: 0;
     transition: ease-in-out;
     display: none;
     margin-top: 1rem;
@@ -106,16 +107,6 @@ h3 {
 #menu-itens li:hover,
 #menu-btn:hover {
     color: var(--color-pink);
-}
-
-#menu-glass {
-    display: block;
-    position: absolute;
-    background-color: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(8px);
-    z-index: -2;
-    height: 100%;
-    width: 100%;
 }
 
 @media screen and (min-width: 992px) {
